<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_statistics"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/statistics" />
    <item
        android:id="@+id/nav_debts"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/debts" />
    <item
        android:id="@+id/nav_calendar"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="@string/calendar" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/settings" />
</menu>