<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currency"
        android:textStyle="bold"
        android:layout_marginBottom="4dp"/>

    <Spinner
        android:id="@+id/spExportCurrency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transaction_type"
        android:textStyle="bold"
        android:layout_marginBottom="4dp"/>

    <Spinner
        android:id="@+id/spExportType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/period"
        android:textStyle="bold"
        android:layout_marginBottom="4dp"/>

    <Button
        android:id="@+id/btnExportPeriod"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_date"/>

    <TextView
        android:id="@+id/tvSelectedPeriod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/all"
        android:gravity="center"
        android:layout_marginTop="4dp"/>

</LinearLayout>